Solve products of array except self